--- a/css/survey.css
+++ b/css/survey.css
@@ -69,6 +69,7 @@ input[type=radio]:focus + label {
 #albums, textarea, input[type=text], input[type=email] {
 	border-radius: 5px;
 	border: 3px solid #02eabb;
+	color: #999;
 }
 .form-section button {
 	width: 100%;
@@ -124,9 +125,13 @@ input[type=radio] {
 input[type=radio]:focus+span {
 	outline: none;
 }
-input[type=radio]:checked+span, input[type=radio]:focus+span {
-	background: black;
+input[type=radio]:focus+span {
+	background: #f2f2f2;
 	border: 3px solid #FF0D00;
+}
+input[type=radio]:checked+span{
+	background: #f2f2f2;
+	border: 3px solid #02eabb;
 }
 
 /*******************
